public/main.css
/* ... */
  @media (min-width: 600px) {
    .btn-content {
      max-width: 450px;
      width: 450px; } }
  @media (max-width: 349.98px) {
    .btn-content {
      max-width: 280px;
      width: 280px; } }
  .btn-content:hover {
    color: var(--color-primary);
    transform: scale(1.06); }
  .btn-content .text-md {
    font-weight: bold;
    margin-bottom: 6px; }
  .btn-content .text-sm {
    font-size: 0.72rem !important;
    line-height: 1rem !important;
    font-weight: 400;
    color: var(--color-faded-3);
    opacity: 0.7; }
  .btn-content.active {
    content: "✓";
    border: none;
    background-color: var(--color-primary);
    color: #fff !important; }
    .btn-content.active .n-text {
      color: #fff !important; }
    .btn-content.active:after {
      position: absolute;
      font-size: 12px;
      display: flex;
      align-items: center;
      justify-content: center;
      color: #fff;
      content: "";
      top: -12px;
      left: -12px;
      width: 24px;
      height: 24px;
      background-color: var(--color-solid);
      border-radius: 12px;
      box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
      color: #fff;
      content: "✓";
      background-color: var(--color-primary-bright); }

.btn-icon {
  font-size: 26px !important;
  padding-left: 10px;
  padding-right: 10px;
  outline: 0 !important; }

.btn-primary {
  background-color: var(--color-primary-bright); }
  .btn-primary:hover {
    background-color: var(--color-primary); }

.btn-light {
  background-color: var(--color-faded); }
  .btn-light:hover {
    background-color: var(--color-faded-2); }

.btn-circle {
  width: 40px;
  height: 40px;
  border-radius: 20px !important;
  padding: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-shrink: 0;
  flex-grow: 0; }
  .btn-circle.btn-primary {
    border: none !important; }

.btn.touchable {
  display: flex;
  align-items: center;
  justify-content: center;
  min-height: 60px;
  min-width: 60px;
  margin: 10px;
  box-shadow: 0px 4px 8px -2px rgba(0, 0, 0, 0.1); }
  .btn.touchable.btn-lg, .btn-group-lg > .btn.touchable {
    min-height: 140px;
    min-width: 140px;
    font-size: 3rem; }

.btn.btn-text {
  color: var(--color-primary); }

.btn-group {
  background-color: var(--color-solid-2);
  padding: 2px;
  border-radius: 1.2rem; }
  .btn-group .btn {
    background: transparent !important;
    border: none;
    transition: all 0.2s ease-in-out;
    color: var(--color-inverse);
    flex-grow: 1;
    flex-shrink: 1;
    padding-left: 6px !important;
    padding-right: 6px !important; }
    .btn-group .btn.active {
      background-color: var(--color-solid) !important;
      border-radius: 10px !important;
      box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.14);
      border-radius: 1.2rem !important; }
    .btn-group .btn i.zmdi {
      font-size: 1.4rem; }

.btn-clear {
  background-color: none;
  border: none;
  color: var(--color-inverse-1); }
  .btn-clear[disabled] {
    opacity: 0.2; }

.btn-square {
  border-radius: 0 !important; }

.bg-faded {
  background-color: var(--color-faded) !important; }

.btn-round {
  border-radius: 20px; }
  .btn-round.btn-lg, .btn-group-lg > .btn-round.btn {
    border-radius: 30px; }
  .btn-round.btn-outline {
    border: solid 1px var(--color-primary); }

.show-test {
  border: solid 1px #000;
  padding: 10px;
  position: relative; }
  .show-test:before {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    content: "xs";
    background-color: red; }
    @media (min-width: 350px) {
      .show-test:before {
        content: "Small";
        background-color: green; } }
    @media (min-width: 600px) {
      .show-test:before {
        content: "med"; } }
    @media (min-width: 980px) {
      .show-test:before {
        content: "lg"; } }
    @media (min-width: 1280px) {
      .show-test:before {
        content: "xl"; } }

html,
body {
  -webkit-user-select: none;
  -webkit-touch-callout: none;
  font-family: -apple-system, BlinkMacSystemFont, Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
  -webkit-text-size-adjust: auto;
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-size: 18px;
  background-color: var(--color-solid); }

body.no-scroll {
  overflow: hidden;
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0; }

body {
  --color-darkest: #fff;
  --color-bg: #f9f9f9;
  --tracker-background: #fff;
  --color-inverse: #333;
  --color-inverse-1: #555;
  --color-inverse-2: #777;
  --color-inverse-3: #999;
  --color-solid: #fff;
  --color-white: #fff;
  --color-solid-1: #eee;
  --color-solid-2: rgb(223, 223, 223);
  --color-solid-3: #666;
  --color-primary: #20699d;
  --tabs-background: var(--color-primary);
  --color-primary-muted: #4d84a1;
  --color-primary-dark: #1a212a;
  --color-primary-faded: rgba(50, 159, 215, 0.45);
  --color-primary-bright: #319ed7;
  --color-orange: #ed9614;
  --color-green: #38a83f;
  --color-red: #e94151;
  --color-tabs: var(--color-primary);
  --color-faded: rgba(0, 0, 0, 0.06);
  --color-faded-inverse: rgba(255, 255, 255, 0.06);
  --color-faded-1: rgba(0, 0, 0, 0.1);
  --color-faded-2: rgba(0, 0, 0, 0.2);
  --color-faded-3: rgba(0, 0, 0, 0.4);
  --color-full-screen: rgba(0, 0, 0, 0.7);
  --color-background-selected: rgba(32, 105, 157, 0.1);
  --color-translucent: rgba(255, 255, 255, 0.89);
  --box-shadow-tight: 0px 3px 5px rgba(0, 0, 0, 0.2);
  --box-shadow: 0px 8px 18px -10px rgba(0, 0, 0, 0.2);
  --box-shadow-float: 0 4px 8px rgba(0, 0, 0, 0.08),
    0 2px 4px rgba(0, 0, 0, 0.08), 0 0 2px rgba(0, 0, 0, 0.24);
  --header-background: #fff;
  --modal-border: solid 1px rgba(0, 0, 0, 0.12); }

body.test * {
  border: solid 1px rgba(255, 0, 0, 0.6) !important; }

body {
  background-color: var(--color-bg); }
  body .main-content:before {
    bottom: -50px;
    left: 0;
    right: 0;
    content: "";
    transition: all 0.2s ease-in-out;
    position: fixed;
    background-color: transparent; }
/* ... */

